--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -233,12 +233,11 @@
             <h2 class="content-title card-title">Dashboard</h2>
             <p>Whole data about your business here</p>
           </div>
-          <!-- <div>
-            <a href="#" class="btn btn-primary"
-              ><i class="text-muted material-icons md-post_add"></i>Create
-              report</a
-            >
-          </div> -->
+          <div>
+            <a href="/admin/sales-report/download" class="btn btn-primary" target="_blank">
+              <i class="material-icons md-download"></i>Sales Report
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-lg-3">
