--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -108,7 +108,8 @@
                     <img class="svgInject" alt="Wishlist" src="/userassets/imgs/theme/icons/icon-heart.svg" width="28" height="28" />
                     <span id="wishlist-count" 
                           class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary">
-                      0
+                    <%= userCartAndWishlist.wishlistCount %>
+
                     </span>
                   </a>
                 </div>
@@ -119,7 +120,7 @@
                     <img alt="Cart" src="/userassets/imgs/theme/icons/icon-cart.svg" width="28" height="28" />
                     <span id="cart-count" 
                           class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary">
-                      0
+                      <%= userCartAndWishlist.cartCount %>
                     </span>
                   </a>
                 </div>
