--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -658,7 +658,7 @@
                       <div class="product-cart-wrap small hover-up">
                         <div class="product-img-action-wrap">
                           <div class="product-img product-img-zoom">
-                            <a href="shop-product-right.html" tabindex="0">
+                            <a href="/product-details/<%= e._id%>" tabindex="0">
                               <img
                                 class="default-img"
                                 src="<%= e.images[0]?.path%>"
